--- a/eccom/templates/perfil.html
+++ b/eccom/templates/perfil.html
@@ -19,6 +19,7 @@
         background: linear-gradient(45deg, #0a0a0a, #ff0000);
         background-size: 400% 400%;
         animation: gradientBG 15s ease infinite;
+        overflow-y: scroll;
     }
     
     p {
