--- a/eccom/templates/perfil.html
+++ b/eccom/templates/perfil.html
@@ -3,156 +3,97 @@
 
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>User Profile</title>
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <style>
-    body {
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        height: 100vh;
-        background: linear-gradient(45deg, #0a0a0a, #ff0000);
-        background-size: 400% 400%;
-        animation: gradientBG 15s ease infinite;
-        overflow-y: scroll;
-    }
-    
-    p {
-        color: black;
-    }
-    @keyframes gradientBG {
-        0% {
-            background-position: 0% 50%;
-        }
-        50% {
-            background-position: 100% 50%;
-        }
-        100% {
-            background-position: 0% 50%;
-        }
-    }
-    @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
+<style>
+  /* Estilo para el texto */
+  .container h2,
+  .container p {
+      color: black; /* Cambia el color del texto a blanco */
+  }
+  .form-group {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px; /* Espacio entre los campos */
+  }
+</style>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Register</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<!-- MATERIAL DESIGN ICONIC FONT -->
+		<link rel="stylesheet" href="/static/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 
-
-    .social-btn-holder{
-      padding:10px;
-      margin-top:5px;
-      margin-bottom:5px;
-    }
-    .social-btn-holder .btn-social{
-      font-size:12px;
-      font-weight:bold;
-    }
-    
-    .btn-social{
-      color: white;
-      opacity:0.9;
-    }
-    .btn-social:hover {
-      color: white;
-      opacity:1;
-    }
-    .btn-facebook {
-    background-color: #3b5998;
-    }
-    .btn-twitter {
-    background-color: #00aced;
-    }
-    .btn-linkedin {
-    background-color:#0e76a8;
-    }
-    .btn-github{
-      background-color:#000000;
-    }
-    .btn-google {
-      background-color: #c32f10;
-    }
-    .btn-stackoverflow{
-      background-color: #D38B28;
-    }
-    
-    .btn-hackerrank{
-      background-color: #27AB5B;
-    }
-    .btn-soundcloud{
-      background-color: #FF7202;
-    }
-    
-    .centered-text{
-      text-align: center;
-    }
-    .custom-container {
-        background-color: #f5f5f5;
-        border-radius: 10px;
-        padding: 20px;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    }
-    
-    .welcome-msg {
-        text-align: center;
-        color: #333;
-    }
-    
-    .profile-info {
-        list-style-type: none;
-        padding: 0;
-    }
-    
-    .profile-info li {
-        margin-bottom: 10px;
-        font-size: 16px;
-    }
-    
-    .profile-info li strong {
-        font-weight: bold;
-        margin-right: 5px;
-    }
-    .red-border {
-        border: 2px solid red;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">    
-    <div class="row">
-      <div class="panel panel-default">
-        <div class="panel-heading">  
-          <h4>User Profile</h4>
-        </div>
-        <div class="panel-body">
-          <div class="col-xs-12 col-sm-6">
-            {% if request.user.perfil.imagen_perfil %}
-              <img alt="User Pic" src="{{ request.user.perfil.imagen_perfil.url }}" id="profile-image1" class="img-circle img-responsive">
-            {% else %}
-              <img alt="User Pic" src="https://cdn-icons-png.flaticon.com/512/3135/3135768.png" id="profile-image1" class="img-circle img-responsive">
-            {% endif %}                     
-            <form method="post" enctype="multipart/form-data">
-              {% csrf_token %}
-              {{ form.imagen_perfil }}
-              <button type="submit">Guardar cambios</button>
-            </form>
+		<!-- STYLE CSS -->
+		<link rel="stylesheet" href="/static/css/style2.css">
+		
+	</head>
+	<body>
+     
+		<div class="wrapper" style="background-image: url('https://wallpaperxyz.com/wp-content/uploads/Gif-Animated-Wallpaper-Background-Full-HD-Free-Download-for-PC-Macbook-261121-Wallpaperxyz.com-13.gif');">
+      <div class="inner" style="display: flex;">
+          <div class="image-holder">
+              <img src="https://www.virtualvideogamestore.com/uploads/8/1/9/4/8194123/4282881_orig.gif" alt="">
           </div>
-          <div class="col-xs-12 col-sm-6">
-            <div class="container">
-              <h2>Bienvenido <span itemprop="name">{{usuario.username}}</span></h2>
-            </div>
-            <ul class="container details">
-              <li><p><span style="width:50px;"></span>-Edad: {{ perfil.edad }}</p></li>
-              <li><p><span style="width:50px;"></span>-Juego favorito: {{ perfil.juego_favorito }}</p></li>
-              <li><p><span style="width:50px;"></span>-Plataforma favorita: {{ perfil.plataforma_favorita }}</p></li>
-              <li><p><span style="width:50px;"></span>-Donde vive: {{ perfil.lugar_residencia }}</p></li>
-              <li><p><span style="width:50px;"></span>-Ventas Compradas: {{ perfil.ventas_compradas }}</p></li>
-              <li><p><span style="width:50px;"></span>-Genero: {{ perfil.sexo }}</p></li>
-              <li><p><span style="width:50px;"></span>-Genero Favorito: {{ perfil.genero }}</p></li>
-            </ul>
+          <div class="container">
+              <h2 style="font-size: 24px;">Bienvenido <span itemprop="name">{{usuario.username}}</span></h2>
+              <br>
+              <h4>Tus datos:</h4>
+              <ul class="details" style="margin-right: 20px;">
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Edad: {{ perfil.edad }}</p></li>
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Juego favorito: {{ perfil.juego_favorito }}</p></li>
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Plataforma favorita: {{ perfil.plataforma_favorita }}</p></li>
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Donde vive: {{ perfil.lugar_residencia }}</p></li>
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Ventas Compradas: {{ perfil.ventas_compradas }}</p></li>
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Genero: {{ perfil.sexo }}</p></li>
+                  <li><p style="font-size: 18px;"><span style="width:50px;"></span>-Genero Favorito: {{ perfil.genero }}</p></li>
+              </ul>
+              <br>
+              <h4>ACTUALIZA TUS DATOS:</h4>
+              <form method="post" style="margin-left: 20px;">
+                  {% csrf_token %}
+                  <div > 
+                      EDAD:
+                      {{ form.edad }}
+                  </div>
+                  <br>
+                  <div>
+                      TU JUEGO FAVORITO:
+                      {{ form.juego_favorito }}
+                  </div>
+                  <br>
+                  <div  >
+                      TU PLATAFORMA FAVORITA:
+                      {{ form.plataforma_favorita }}
+                  </div>
+                  <br>
+                  <div>
+                      TU GENERO FAVORITO: 
+                      {{ form.genero }}
+                  </div>
+                  <br>
+                  <div >
+                      CUAL ES TU SEXO?
+                      {{ form.sexo }}
+                  </div>
+                  <br>
+                  <div>
+                      DONDE VIVES?: 
+                      {{ form.lugar_residencia }}
+                  </div>
+                  <br>
+                  <button type="submit">Guardar cambios</button>
+                  {% if messages %}
+                      {% for message in messages %}
+                          <div class="alert alert-success">
+                              {{ message }}
+                          </div>
+                      {% endfor %}
+                  {% endif %}
+              </form>
           </div>
-        </div>
       </div>
-    </div>
-
+  </div>
+	</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</html>
 {% endblock %}
