--- a/eccom/templates/registration/register.html
+++ b/eccom/templates/registration/register.html
@@ -5,338 +5,97 @@
 
 {% load static %}
 
+
+
 {% block content %}
-<style>
-  @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,700,500);
 
-  body {
-    padding-top: 0px;
-    background:#F7F7F7;
-    color:#666666;
-    font-family: 'Roboto', sans-serif;
-    font-weight:100;
-  }
-  
-  body {
-    width: 100%;
-    background: -webkit-linear-gradient(left, #0a0a0a, #ff0000);
-    background: linear-gradient(to right, #0a0a0a, #ff0000);
-    background-size: 600% 100%;
-    -webkit-animation: HeroBG 20s ease infinite;
-            animation: HeroBG 20s ease infinite;
-}
-  @-webkit-keyframes HeroBG {
-    0% {
-      background-position: 0 0;
-    }
-    50% {
-      background-position: 100% 0;
-    }
-    100% {
-      background-position: 0 0;
-    }
-  }
-  
-  @keyframes HeroBG {
-    0% {
-      background-position: 0 0;
-    }
-    50% {
-      background-position: 100% 0;
-    }
-    100% {
-      background-position: 0 0;
-    }
-  }
-  
-  
-  .panel {
-    border-radius: 5px;
-  }
-  label {
-    font-weight: 300;
-  }
-  .panel-login {
-     border: none;
-    -webkit-box-shadow: 0px 0px 49px 14px rgba(188,190,194,0.39);
-    -moz-box-shadow: 0px 0px 49px 14px rgba(188,190,194,0.39);
-    box-shadow: 0px 0px 49px 14px rgba(188,190,194,0.39);
-    }
-  .panel-login .checkbox input[type=checkbox]{
-    margin-left: 0px;
-  }
-  .panel-login .checkbox label {
-    padding-left: 25px;
-    font-weight: 300;
-    display: inline-block;
-    position: relative;
-  }
-  .panel-login .checkbox {
-   padding-left: 20px;
-  }
-  .panel-login .checkbox label::before {
-    content: "";
-    display: inline-block;
-    position: absolute;
-    width: 17px;
-    height: 17px;
-    left: 0;
-    margin-left: 0px;
-    border: 1px solid #cccccc;
-    border-radius: 3px;
-    background-color: #fff;
-    -webkit-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-    -o-transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-    transition: border 0.15s ease-in-out, color 0.15s ease-in-out;
-  }
-  .panel-login .checkbox label::after {
-    display: inline-block;
-    position: absolute;
-    width: 16px;
-    height: 16px;
-    left: 0;
-    top: 0;
-    margin-left: 0px;
-    padding-left: 3px;
-    padding-top: 1px;
-    font-size: 11px;
-    color: #555555;
-  }
-  .panel-login .checkbox input[type="checkbox"] {
-    opacity: 0;
-  }
-  .panel-login .checkbox input[type="checkbox"]:focus + label::before {
-    outline: thin dotted;
-    outline: 5px auto -webkit-focus-ring-color;
-    outline-offset: -2px;
-  }
-  .panel-login .checkbox input[type="checkbox"]:checked + label::after {
-    font-family: 'FontAwesome';
-    content: "\f00c";
-  }
-  .panel-login>.panel-heading .tabs{
-    padding: 0;
-  }
-  .panel-login h2{
-    font-size: 20px;
-    font-weight: 300;
-    margin: 30px;
-  }
-  .panel-login>.panel-heading {
-    color: #848c9d;
-    background-color: #e8e9ec;
-    border-color: #fff;
-    text-align:center;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-    border-top-left-radius: 0px;
-    border-top-right-radius: 0px;
-    border-bottom: 0px;
-    padding: 0px 15px;
-  }
-  .panel-login .form-group {
-    padding: 0 30px;
-  }
-  .panel-login>.panel-heading .login {
-    padding: 20px 30px;
-    border-bottom-leftt-radius: 5px;
-  }
-  .panel-login>.panel-heading .register {
-    padding: 20px 30px;
-    background: #2d3b55;
-    border-bottom-right-radius: 5px;
-  }
-  .panel-login>.panel-heading a{
-    text-decoration: none;
-    color: #666;
-    font-weight: 300;
-    font-size: 16px;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
-  }
-  .panel-login>.panel-heading a#register-form-link {
-    color: #fff;
-    width: 100%;
-    text-align: right;
-  }
-  .panel-login>.panel-heading a#login-form-link {
-    width: 100%;
-    text-align: left;
-  }
-  
-  .panel-login input[type="text"],.panel-login input[type="email"],.panel-login input[type="password"] {
-    height: 45px;
-    border: 0;
-    font-size: 16px;
-    -webkit-transition: all 0.1s linear;
-    -moz-transition: all 0.1s linear;
-    transition: all 0.1s linear;
-    -webkit-box-shadow: none;
-    box-shadow: none;
-    border-bottom: 1px solid #e7e7e7;
-    border-radius: 0px;
-    padding: 6px 0px;
-  }
-  .panel-login input:hover,
-  .panel-login input:focus {
-    outline:none;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
-    box-shadow: none;
-    border-color: #ccc;
-  }
-  .btn-login {
-    background-color: #E8E9EC;
-    outline: none;
-    color: #2D3B55;
-    font-size: 14px;
-    height: auto;
-    font-weight: normal;
-    padding: 14px 0;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 0px;
-    box-shadow: none;
-  }
-  .btn-login:hover,
-  .btn-login:focus {
-    color: #fff;
-    background-color: #2D3B55;
-  }
-  .forgot-password {
-    text-decoration: underline;
-    color: #888;
-  }
-  .forgot-password:hover,
-  .forgot-password:focus {
-    text-decoration: underline;
-    color: #666;
-  }
-  
-  .btn-register {
-    background-color: #E8E9EC;
-    outline: none;
-    color: #2D3B55;
-    font-size: 14px;
-    height: auto;
-    font-weight: normal;
-    padding: 14px 0;
-    text-transform: uppercase;
-    border: none;
-    border-radius: 0px;
-    box-shadow: none;
-  }
-  .btn-register:hover,
-  .btn-register:focus {
-    color: #fff;
-    background-color: #2D3B55;
-  }
-  
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Register</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
+		<!-- MATERIAL DESIGN ICONIC FONT -->
+		<link rel="stylesheet" href="/static/fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
 
-
-</style>
-
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-
-<div class="container">
-   <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <div class="panel panel-login">
-        <div class="panel-body">
-          <div class="row">
-            <div class="col-lg-12">
-             
-              <form action="" method="POST" style="display: block;">
-                {% csrf_token %}
-                <h2>REGISTER</h2>
-                <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="usuario" name="username" aria-describedby="usernameHelp" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="email" name="email" aria-describedat="emailHelp" placeholder="Email Address">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="password" name="password1" aria-describedby="password1Help" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="passwordRepeat" name="password2" aria-describedby="password2Help" placeholder="Confirm Password">
-                </div>
-                <!-- Campos adicionales -->
-                <div class="form-group">
-                    <input type="number" class="form-control form-control-lg" id="edad" name="edad" placeholder="Edad">
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="juegoFavorito" name="juego_favorito" placeholder="Juego Favorito">
-                </div>
-                <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="plataformaFavorita" name="plataforma_favorita" placeholder="Plataforma Favorita">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="genero" name="genero" placeholder="Genero favorito">
-              </div>
-                <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="lugarResidencia" name="lugar_residencia" placeholder="Lugar de Residencia">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="form-control form-control-lg" id="sexo" name="sexo" placeholder="sexo">
-              </div>
-              
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                            <input type="submit" class="form-control btn btn-register">
-                        </div>
-                    </div>
-                </div>
-            </form>
-            </div>
-          </div>
-        </div>
-        <div class="panel-heading">
-          <div class="row">
-            <div class="col-xs-6 tabs">
-              <a href="{% url 'login'  %}" class="active"><div class="login">LOGIN</div></a>
-            </div>
-            <div class="col-xs-6 tabs">
-              <a href="{% url 'register'  %}"  ><div class="register">REGISTER</div></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<footer>
-    <div class="container">
-        <div class="col-md-10 col-md-offset-1 text-center">
-        </div>   
-    </div>
-</footer>
-
-<script>
-
-  $(function() {
-    $('#login-form-link').click(function(e) {
-    	$("#login-form").delay(100).fadeIn(100);
- 		$("#register-form").fadeOut(100);
-		$('#register-form-link').removeClass('active');
-		$(this).addClass('active');
-		e.preventDefault();
-	});
-	$('#register-form-link').click(function(e) {
-		$("#register-form").delay(100).fadeIn(100);
- 		$("#login-form").fadeOut(100);
-		$('#login-form-link').removeClass('active');
-		$(this).addClass('active');
-		e.preventDefault();
-	});
-
-});
-</script>
+		<!-- STYLE CSS -->
+		<link rel="stylesheet" href="/static/css/style2.css">
+	</head>
+	<body>
+     
+		<div class="wrapper" style="background-image: url('https://i.pinimg.com/originals/61/8f/08/618f083c61a7460ce0a6064319af41bd.gif');">
+			<div class="inner">
+				<div class="image-holder">
+					<img src="https://i.pinimg.com/originals/94/87/36/948736bdfe0e552efaa5229ca730c100.gif" alt="">
+				</div>
+				<form action="" method="POST">
+					{% csrf_token %}
+					<h3>Registrate</h3>
+					<div>
+						<input type="text" class="form-control form-control-lg" id="usuario" name="username" aria-describedby="usernameHelp" placeholder="Username" required>
+					</div>
+					<div>
+						<input type="email" class="form-control form-control-lg" id="email" name="email" aria-describedat="emailHelp" placeholder="Email Address" required>
+					</div>
+					<div>
+						<input type="password" class="form-control form-control-lg" id="password" name="password1" aria-describedby="password1Help" placeholder="Password" required>
+					</div>
+					<div>
+						<input type="password" class="form-control form-control-lg" id="passwordRepeat" name="password2" aria-describedby="password2Help" placeholder="Confirm Password" required>
+					</div>
+					<!-- Campos adicionales -->
+					<div>
+						<input type="number" class="form-control form-control-lg" id="edad" name="edad" placeholder="Edad" min="10" max="100" required>
+					</div>
+					<div>
+						<input type="text" class="form-control form-control-lg" id="juegoFavorito" name="juego_favorito" placeholder="Juego Favorito" required>
+					</div>
+					<div>
+						<select class="form-control form-control-lg" id="plataformaFavorita" name="plataforma_favorita" required>
+							<option value="">Selecciona una plataforma</option>
+							<option value="Xbox">Xbox</option>
+							<option value="PlayStation">PlayStation</option>
+							<option value="Nintendo">Nintendo</option>
+						</select>
+					</div>
+					<div>
+						<select class="form-control form-control-lg" id="genero" name="genero" required>
+							<option value="">Selecciona un género favorito</option>
+							<option value="Aventura">Aventura</option>
+							<option value="Plataforma">Plataforma</option>
+							<option value="Acción">Acción</option>
+							<option value="Estrategia">Estrategia</option>
+							<option value="Deportivo">Deportivo</option>
+							<option value="Terror">Terror</option>
+							<option value="Rol">Rol</option>
+							<option value="Musicales">Musicales</option>
+						</select>
+					</div>
+					<div>
+						<label for="sexo">Sexo:</label><br>
+						<input type="radio" id="masculino" name="sexo" value="masculino" required>
+						<label for="masculino">Masculino</label><br>
+						<input type="radio" id="femenino" name="sexo" value="femenino" required>
+						<label for="femenino">Femenino</label><br>
+					</div>
+					<div>
+						<input type="text" class="form-control form-control-lg" id="lugarResidencia" name="lugar_residencia" placeholder="Lugar de Residencia" required>
+					</div>
+					<div style="display: flex; justify-content: space-between;">
+					<button class="a" type="submit">Registrarse
+            <a ><i class="zmdi zmdi-arrow-right"></i></a>
+					</button>
+					<p>"    "</p>
+					
+					
+				</form>
+        <button class"a">Ya tienes cuenta? Inicia sesion!
+          <a href="{% url 'login'  %}" ><i class="zmdi zmdi-arrow-right"></i></a>
+        </button>
+			</div>
+			</div>
+		</div>
+		
+	</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
+</html>
 {% endblock %}
