--- a/eccom/templates/registration/login.html
+++ b/eccom/templates/registration/login.html
@@ -3,6 +3,7 @@
 
 <!DOCTYPE html>
 
+{% load static %}
 
 {% block content %}
 <html>
@@ -16,7 +17,6 @@
 
 		<!-- STYLE CSS -->
 		<link rel="stylesheet" href="/static/css/style2.css">
-		
 	</head>
 	<body>
      
