--- a/eccom/templates/detalle_articulo.html
+++ b/eccom/templates/detalle_articulo.html
@@ -8,7 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-	<title>Electro - HTML Ecommerce Template</title>
+	<title>Uacj</title>
 
 	<!-- Google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -81,17 +81,7 @@
 					<div class="col-md-6">
 						<div class="header-search">
 							<form method="GET" action="{% url 'todo' %}">
-								<select name="categoria" class="input-select">
-									<option value="0">All Categories</option>
-									<option value="Aventura">Aventura</option>
-									<option value="Plataforma">Plataforma</option>
-									<option value="Accion">Acción</option>
-									<option value="Estrategia">Estrategia</option>
-									<option value="Deportivo">Deportivo</option>
-									<option value="Terror">Terror</option>
-									<option value="Rol">Rol</option>
-									<option value="Musicales">Musicales</option>
-								</select>
+								
 								<input class="input" type="text" name="q" placeholder="Buscar aquí">
 								<button type="submit" class="search-btn">Buscar</button>
 							</form>
