--- a/eccom/templates/todos.html
+++ b/eccom/templates/todos.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-		<title>Electro - HTML Ecommerce Template</title>
+		<title>Uacj</title>
 
 		<!-- Google font -->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700" rel="stylesheet">
@@ -78,21 +78,10 @@
 						<div class="col-md-6">
 							<div class="header-search">
 								<form method="GET" action="{% url 'todo' %}">
-									<select name="categoria" class="input-select">
-										<option value="0">All Categories</option>
-										<option value="Aventura">Aventura</option>
-										<option value="Plataforma">Plataforma</option>
-										<option value="Accion">Acción</option>
-										<option value="Estrategia">Estrategia</option>
-										<option value="Deportivo">Deportivo</option>
-										<option value="Terror">Terror</option>
-										<option value="Rol">Rol</option>
-										<option value="Musicales">Musicales</option>
-									</select>
+								
+									
 									<input class="input" type="text" name="q" placeholder="Buscar aquí">
 									<button type="submit" class="search-btn">Buscar</button>
-								</form>
-									
 								</form>
 							</div>
 						</div>
@@ -193,7 +182,7 @@
             <label for="category-1">
                 <span></span>
                 Aventura
-                <small>(120)</small>
+             
             </label>
         </div>
         <div class="input-checkbox">
@@ -201,7 +190,7 @@
             <label for="category-2">
                 <span></span>
                 Plataforma
-                <small>(740)</small>
+               
             </label>
         </div>
         <!-- Repite lo mismo para las otras categorías -->
@@ -210,7 +199,7 @@
             <label for="category-3">
                 <span></span>
                 Acción
-                <small>(1450)</small>
+                
             </label>
         </div>
         <div class="input-checkbox">
@@ -218,7 +207,7 @@
             <label for="category-4">
                 <span></span>
                 Estrategia
-                <small>(578)</small>
+                
             </label>
         </div>
         <div class="input-checkbox">
@@ -226,7 +215,7 @@
             <label for="category-5">
                 <span></span>
                 Deportivo
-                <small>(120)</small>
+               
             </label>
         </div>
         <div class="input-checkbox">
@@ -234,7 +223,7 @@
             <label for="category-6">
                 <span></span>
                 Terror
-                <small>(740)</small>
+                
             </label>
         </div>
         <div class="input-checkbox">
@@ -242,7 +231,7 @@
             <label for="category-7">
                 <span></span>
                 Rol
-                <small>(740)</small>
+                
             </label>
         </div>
         <div class="input-checkbox">
@@ -250,7 +239,7 @@
             <label for="category-8">
                 <span></span>
                 Musicales
-                <small>(740)</small>
+                
             </label>
         </div>
     </div>
@@ -261,7 +250,7 @@
 			<label for="console-1">
 				<span></span>
 				Xbox
-				<small>(740)</small>
+				
 			</label>
 		</div>
 		<div class="input-checkbox">
@@ -269,7 +258,7 @@
 			<label for="console-2">
 				<span></span>
 				Playstation
-				<small>(740)</small>
+			
 			</label>
 		</div>
 		<div class="input-checkbox">
@@ -277,7 +266,7 @@
 			<label for="console-3">
 				<span></span>
 				Nintendo
-				<small>(740)</small>
+				
 			</label>
 		</div>
 	</div>
